test/log/reduction/vrsum_v_i64.txt
vrsum_v_i64.c:9:2: warning: multi-line comment [-Wcomment]
    9 |  //#define data_init_bool(a, b, n, threshold) \
      |  ^
vrsum_v_i64.c:11:44: warning: backslash and newline separated by space
   11 |  #define data_init_scalar(a, b, threshold) \
      |                                             
vrsum_v_i64.c:13:40: warning: backslash and newline separated by space
   13 |  #define data_init(a, b, n, threshold) \
      |                                         
vrsum_v_i64.c:14:35: warning: backslash and newline separated by space
   14 |      for(int i = 0; i < n; i++) { \
      |                                    
vrsum_v_i64.c:15:40: warning: backslash and newline separated by space
   15 |              a[i] = random(threshold); \
      |                                         
vrsum_v_i64.c:16:27: warning: backslash and newline separated by space
   16 |              b[i] = a[i]; \
      |                            
vrsum_v_i64.c:22:6: warning: no previous prototype for 'vrsum_v_i64_golden' [-Wmissing-prototypes]
   22 | void vrsum_v_i64_golden(int64_t *a,int64_t *exp_result) {
      |      ^~~~~~~~~~~~~~~~~~
vrsum_v_i64.c: In function 'vrsum_v_i64_golden':
vrsum_v_i64.c:24:1: error: 'Operator' undeclared (first use in this function); did you mean 'perror'?
   24 | Operator Line --- TODO
      | ^~~~~~~~
      | perror
vrsum_v_i64.c:24:1: note: each undeclared identifier is reported only once for each function it appears in
vrsum_v_i64.c:24:9: error: expected ';' before 'Line'
   24 | Operator Line --- TODO
      |         ^~~~~
      |         ;
vrsum_v_i64.c:22:34: warning: unused parameter 'a' [-Wunused-parameter]
   22 | void vrsum_v_i64_golden(int64_t *a,int64_t *exp_result) {
      |                         ~~~~~~~~~^
vrsum_v_i64.c:22:45: warning: unused parameter 'exp_result' [-Wunused-parameter]
   22 | void vrsum_v_i64_golden(int64_t *a,int64_t *exp_result) {
      |                                    ~~~~~~~~~^~~~~~~~~~
vrsum_v_i64.c: In function 'main':
vrsum_v_i64.c:47:43: warning: format '%x' expects argument of type 'unsigned int', but argument 3 has type 'long long int' [-Wformat=]
   47 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                          ~^                             ~~~~~~~~~
      |                                           |                                   |
      |                                           unsigned int                        long long int
      |                                          %llx
vrsum_v_i64.c:47:64: warning: format '%x' expects argument of type 'unsigned int', but argument 5 has type 'int64_t' {aka 'long long int'} [-Wformat=]
   47 |             printf("Failed: result[%d] = %x, exp_result[%d] = %x\n", i, result[i], i, exp_result[i]);
      |                                                               ~^                      ~~~~~~~~~~~~~
      |                                                                |                                |
      |                                                                unsigned int                     int64_t {aka long long int}
      |                                                               %llx
make[1]: *** [/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrsum_v_i64.o] Error 1
make: *** [bare] Error 2
======================================================================

 target	:	deccription
****************************
 bare	:	build application on baremental case. param: type=app-type app=app-name

 rbb	:	run bare-app on beak. (build it firstly if modified) param: APP_TYPE=type APP_NAME=app-name , bp=beak-param

 clean		:	delete objects generated by make
****************************

/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/scripts/gorun.sh /home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test "make -j4 APP_TYPE=test APP_NAME=vrsum_v_i64"
~/workspace/risc-v/rivai/riscv-intrinsic-testing/test ~/workspace/risc-v/rivai/riscv-intrinsic-testing
make[1]: Entering directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
    CC vrsum_v_i64.c
Makefile:73: recipe for target '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/bin/test/vrsum_v_i64.o' failed
make[1]: Leaving directory '/home/test/workspace/risc-v/rivai/riscv-intrinsic-testing/test'
Makefile:37: recipe for target 'bare' failed